--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "quill": "^2.0.3",
     "quill-delta": "^5.1.0",
     "react": "^18.2.0",
