--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongoose": "^8.16.5",
     "quill-delta": "^5.1.0",
     "socket.io": "^4.8.1"
   }
